--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+#GENERAL
+server.port = 8080
+#
+# DATABASE
+spring.datasource.url = jdbc:mysql://localhost/refactor_backend_management?useSSL=false
+spring.datasource.dbname = refactor_backend_management
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show.sql = true
+
